--- a/.gitignore
+++ b/.gitignore
@@ -159,8 +159,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-datasets/
-notebooks/
-results/
-wandb/
+datasets
+!/src/datasets
+notebooks
+results
+wandb
 *.pt
